// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reporter addStepData should add step data to a current scenario 1`] = `
Array [
  Object {
    "foo": "current-step",
  },
]
`;

exports[`reporter cucumberJsAttachment should be able to add embeddings to a current step when they have not been added 1`] = `
Object {
  "foo": "current-step",
  "status": "pending",
}
`;

exports[`reporter cucumberJsAttachment should be able to add embeddings to a current step when they have not been added 2`] = `
Object {
  "embeddings": Array [
    Object {
      "data": "data",
      "mime_type": "mime_type",
    },
  ],
  "foo": "current-step",
  "status": "pending",
}
`;

exports[`reporter cucumberJsAttachment should be able to add embeddings to a current step which already has embeddings 1`] = `
Object {
  "embeddings": Array [
    Object {
      "data": "data-1",
      "mime_type": "mime_type-1",
    },
  ],
  "foo": "current-step",
  "status": "pending",
}
`;

exports[`reporter cucumberJsAttachment should be able to add embeddings to a current step which already has embeddings 2`] = `
Object {
  "embeddings": Array [
    Object {
      "data": "data-1",
      "mime_type": "mime_type-1",
    },
    Object {
      "data": "data-2",
      "mime_type": "mime_type-2",
    },
  ],
  "foo": "current-step",
  "status": "pending",
}
`;

exports[`reporter getFeatureDataObject should be able to to create a feature JSON data object 1`] = `
Object {
  "description": "",
  "elements": Array [],
  "id": "create-passed-feature",
  "keyword": "Feature",
  "line": null,
  "name": "Create passed feature",
  "tags": Array [],
  "type": "feature",
  "uri": "Can not be determined",
}
`;

exports[`reporter getFeatureDataObject should be able to to create a feature JSON data object with no line data 1`] = `
Object {
  "description": "",
  "elements": Array [],
  "id": "create-passed-feature",
  "keyword": "Feature",
  "line": null,
  "name": "Create passed feature",
  "tags": Array [],
  "type": "feature",
  "uri": "Can not be determined",
}
`;

exports[`reporter getScenarioDataObject should be able to to create a scenario JSON data object 1`] = `
Object {
  "description": "",
  "id": "create-passed-feature;hook-this-is-doing-nothing-because-it's-a-background\\"",
  "keyword": "Scenario",
  "name": "Hook This is doing nothing because it's a background\\"",
  "steps": Array [],
  "tags": Array [],
  "type": "test",
}
`;

exports[`reporter getStepDataObject should be able to add arguments to the step if they are present 1`] = `
Object {
  "arguments": Array [
    Object {
      "rows": Array [
        Object {
          "cells": Array [
            "Cucumber",
            "Cucumis sativus",
          ],
        },
        Object {
          "cells": Array [
            "Burr Gherkin",
            "Cucumis anguria",
          ],
        },
      ],
    },
  ],
  "keyword": "Given",
  "line": null,
  "match": Object {
    "location": "can not be determined with webdriver.io",
  },
  "name": "I open \\"http://webdriver.io/\\"",
  "result": Object {
    "duration": 0,
    "status": "pending",
  },
}
`;

exports[`reporter getStepDataObject should be able to to create a step JSON data object 1`] = `
Object {
  "arguments": Array [],
  "keyword": "Given",
  "line": null,
  "match": Object {
    "location": "can not be determined with webdriver.io",
  },
  "name": "I open \\"http://webdriver.io/\\"",
  "result": Object {
    "duration": 0,
    "status": "pending",
  },
}
`;

exports[`reporter getStepDataObject should be able to to create a step JSON data object based on a hook 1`] = `
Object {
  "arguments": Array [],
  "keyword": "Before",
  "line": null,
  "match": Object {
    "location": "can not be determined with webdriver.io",
  },
  "name": "Hook",
  "result": Object {
    "duration": 0,
    "status": "",
  },
}
`;

exports[`reporter getStepDataObject should be able to to create a step JSON data object based on malformed data 1`] = `
Object {
  "arguments": Array [],
  "keyword": "",
  "line": null,
  "match": Object {
    "location": "can not be determined with webdriver.io",
  },
  "name": "",
  "result": Object {
    "duration": 0,
    "status": "pending",
  },
}
`;

exports[`reporter getStepDataObject should be able to to create a step JSON data object based on missing keyword data 1`] = `
Object {
  "arguments": Array [],
  "keyword": "",
  "line": null,
  "match": Object {
    "location": "can not be determined with webdriver.io",
  },
  "name": "e",
  "result": Object {
    "duration": 555000000,
    "status": "passed",
  },
}
`;

exports[`reporter on create should set the defaults if only the logfile option is provided 1`] = `
Object {
  "jsonFolder": ".tmp/json/",
  "language": "en",
  "logFile": ".tmp/logFile.json",
}
`;

exports[`reporter on create should verify initial properties 1`] = `
Object {
  "jsonFolder": ".tmp/json-folder/",
  "language": "en",
  "logFile": ".tmp/logFile.json",
}
`;

exports[`reporter on create should verify initial properties 2`] = `Object {}`;

exports[`reporter onSuiteStart should add a scenario to the feature if the feature is already there 1`] = `
Array [
  Object {
    "description": "",
    "id": "create-passed-feature;open-website",
    "keyword": "Scenario",
    "name": "Open website",
    "steps": Array [],
    "tags": "",
  },
]
`;

exports[`reporter onSuiteStart should add instance data to the feature if the feature is already there 1`] = `Object {}`;

exports[`reporter onSuiteStart should add instance data to the feature if the feature is already there 2`] = `
Object {
  "feature": Object {
    "description": "",
    "elements": Array [
      Object {
        "description": "",
        "id": "create-passed-feature;open-website",
        "keyword": "Scenario",
        "name": "Open website",
        "steps": Array [],
        "tags": "",
      },
    ],
    "id": "empty-feature",
    "keyword": "Feature",
    "line": 2,
    "metadata": Object {
      "foo": "bar",
    },
    "name": "Empty feature",
    "tags": "",
  },
}
`;

exports[`reporter onSuiteStart should add the CucumberJS feature object if it is not available 1`] = `Object {}`;

exports[`reporter onSuiteStart should add the CucumberJS feature object if it is not available 2`] = `
Object {
  "feature": Object {
    "keyword": "feature",
    "metadata": Object {},
  },
}
`;

exports[`reporter updateStepStatus should update step data of the current scenario step 1`] = `
Array [
  Object {
    "foo": "current-step",
    "status": "pending",
  },
]
`;

exports[`reporter updateStepStatus should update step data of the current scenario step 2`] = `
Array [
  Object {
    "bar": false,
    "foo": "current-step",
    "status": "passed",
  },
]
`;
